fix: 로딩 마스크 스타일 수정 및 z-index 조정

--- a/app/assets/css/launcher.css
+++ b/app/assets/css/launcher.css
@@ -4127,26 +4127,20 @@ flex-direction: column;
 
 
 
+.loading-mask {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: contain; /* none에서 contain으로 변경 */
+    object-position: center; /* left에서 center로 변경 */
+}
+
 #progress-mask {
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 0%; /* 초기 너비 0% */
+    width: 0%;
     height: 100%;
     overflow: hidden;
     transition: width 0.3s ease;
-    z-index: 10;
-}
-
-.loading-mask {
-    position: absolute; /* 절대 위치로 변경 */
-    top: 0;
-    left: 0;
-    width: 100%; /* 항상 전체 너비 */
-    height: 100%;
-    object-fit: none; /* contain에서 none으로 변경 */
-    object-position: left; /* 왼쪽 정렬 추가 */
-    display: block;
 }
 
 
@@ -4228,7 +4222,7 @@ flex-direction: column;
     object-fit: contain;
     cursor: pointer;
     transition: 0.3s ease;
-    z-index: 100;   /* 다른 요소들 위에 표시 */
+    z-index: 10;   /* 다른 요소들 위에 표시 */
     display: block; /* none에서 block으로 변경 */
     background: transparent;
     border: none;
@@ -4243,7 +4237,7 @@ flex-direction: column;
     right: calc(1.5vw);
     width: auto;
     height: 95px;
-    z-index: 9;
+    z-index: 20;
 }
 
 
